--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "next": "10.0.7",
     "next-auth": "^3.7.0",
     "pg": "^8.5.1",
