More than auth...

--- a/.env
+++ b/.env
@@ -2,4 +2,10 @@ AZURE_CLIENT_ID=b795fb19-4bb4-4b27-a901-288b67119879
 AZURE_CLIENT_SECRET=kFvsAMoz5H49o_-4ke5t14.rCWK~V4g9wC
 AZURE_TENANT_ID=77fdec3c-01dc-42eb-92c9-a523b08255f9
 
+APPLICATION_ID=b795fb19-4bb4-4b27-a901-288b67119879
+AUTH_SECRET=kFvsAMoz5H49o_-4ke5t14.rCWK~V4g9wC
+MSAL_TOKEN_ACCESS=https://login.microsoftonline.com/77fdec3c-01dc-42eb-92c9-a523b08255f9/oauth2/v2.0/token
+MSAL_TOKEN_REQUEST=https://login.microsoftonline.com/77fdec3c-01dc-42eb-92c9-a523b08255f9/oauth2/v2.0/authorize
+MSAL_TOKEN_AUTHORIZE=https://login.microsoftonline.com/77fdec3c-01dc-42eb-92c9-a523b08255f9/oauth2/v2.0/authorize?response_type=code
+
 
