--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "axios": "^0.21.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
+    "moment": "^2.29.1",
     "next": "10.0.7",
     "next-auth": "^3.7.0",
     "pg": "^8.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-moment": "^1.1.1",
     "styled-components": "^5.2.1"
   }
 }
