--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-moment": "^1.1.1",
+    "react-to-print": "^2.12.3",
     "styled-components": "^5.2.1",
     "swr": "^0.5.1"
   }
