--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "qs": "^6.9.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-ga": "^3.3.0",
     "react-moment": "^1.1.1",
     "react-to-print": "^2.12.3",
     "styled-components": "^5.2.1",
