Final push pre-fac

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "framer-motion": "^4.0.0",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "moment": "^2.29.1",
