--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "moment": "^2.29.1",
-    "next": "10.0.7",
+    "next": "^10.1.2",
     "next-auth": "^3.7.0",
     "pg": "^8.5.1",
     "qs": "^6.9.6",
